# GitWiggum

./: .env.secrets.example  .envrc  .gitignore  AGENTS.md  App.cabal  Makefile  README.md  flake.nix  hie-bios.sh  hie.yaml  justfile  kill.sh  kill_all.sh  package-lock.json  package.json  playwright.config.js  prd.json  ralph-prd.json  tmp-probe-autorefresh-existing.js  tmp-verify-diff-ai.js
.githooks/: commit-msg  pre-commit
Application/: Base64.hs  PromptMetadata.hs  Schema.sql
Application/Helper/: Controller.hs  Owner.hs  View.hs
Application/Job/: DiffAiResponseJob.hs
Application/Migration/: .1774737569-create-diff-ai-response-jobs.sql:0:0.swp  1774727942-create-users-auth-fields.sql  1774730318-create-repositories.sql  1774731565-add-repositories-latest-commit-sha.sql  1774734447-add-users-ssh-public-key.sql  1774735004-create-pull-requests.sql  1774737569-create-diff-ai-response-jobs.sql  1774749489-create-pull-request-review-comments.sql
Application/Service/: DiffAI.hs  GitHttpAuth.hs  GitRepository.hs  SshKeys.hs
Config/: Config.hs
Plugins/ihp-auth-support/: ihp-auth-support.cabal
Plugins/ihp-auth-support/IHP/AuthSupport/: Confirm.hs
Plugins/ihp-auth-support/IHP/AuthSupport/Controller/: Confirmations.hs
Plugins/ihp-oauth-github/: ihp-oauth-github.cabal
Plugins/ihp-oauth-github/IHP/OAuth/Github/: Config.hs  Controller.hs  GithubApi.hs  Types.hs
Plugins/ihp-oauth-google/: ihp-oauth-google.cabal
Plugins/ihp-oauth-google/IHP/OAuth/Google/: Config.hs  Controller.hs  Types.hs
Plugins/ihp-oauth-google/IHP/OAuth/Google/View/: NewSessionWithGoogle.hs
Plugins/ihp-oauth-microsoft/: default.nix  ihp-oauth-microsoft.cabal
Plugins/ihp-oauth-microsoft/IHP/OAuth/Microsoft/: Config.hs  Controller.hs  MicrosoftApi.hs  Types.hs
Plugins/ihp-sentry/: ihp-sentry.cabal
Plugins/ihp-sentry/IHP/: Sentry.hs
Plugins/ihp-stripe/: ihp-stripe.cabal
Plugins/ihp-stripe/IHP/Stripe/: Actions.hs  Config.hs  Request.hs  Routes.hs  Types.hs  Webhook.hs
Web/: FrontController.hs  Routes.hs  Types.hs  Worker.hs
Web/Controller/: AccountSettings.hs  Confirmations.hs  Dashboard.hs  GitHttp.hs  PasswordResets.hs  Prelude.hs  PullRequests.hs  Registrations.hs  Repositories.hs  Sessions.hs
Web/Mail/Users/: Confirmation.hs  PasswordReset.hs
Web/View/: Layout.hs  Prelude.hs
Web/View/AccountSettings/: Ssh.hs
Web/View/Dashboard/: Index.hs
Web/View/PasswordResets/: Edit.hs  New.hs
Web/View/PullRequests/: Commits.hs  Conversation.hs  Files.hs  New.hs  ReviewComments.hs  Shell.hs
Web/View/Registrations/: New.hs
Web/View/Repositories/: Agents.hs  New.hs  PullRequests.hs  Shell.hs  Show.hs
Web/View/Sessions/: New.hs
Web/View/Static/: Home.hs
playwright/: auth.spec.js  git-http.spec.js  pull-requests.spec.js  repositories.spec.js  rgh-capture.spec.js  ssh-settings.spec.js
playwright/helpers/: app-base-url.js  ha-harness.js  mailhog.js
scripts/: gitWiggum  install-hooks.sh  rgh-capture.js
static/: 403.html  404.html  auth-signup.js  google-login.js  helpers-htmx.js  htmx-instant-click.js  ihp-auto-refresh-htmx.js  robots.txt  stimulus-app.js
static/controllers/: auto_open_modal_controller.js
